# TS_ENGINE_BatchingDemo

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateVS19Project.bat  GenerateVS22Project.bat  LICENSE  README.md
Assets/Models/: monk_character.glb
Assets/Shaders/: BatchLit.frag  BatchLit.vert  Lit.frag  Lit.vert
src/: Sandbox.cpp  SandboxLayer.cpp  SandboxLayer.h
